@@ -3,6 +3,54 @@ plugins {
     id 'gor.java-application'
     id 'gor.common'
     id 'gor.scala-common'
+    id 'com.google.cloud.tools.jib'
+}
+
+jib {
+    from {
+        image = 'registry.gitlab.com/wuxi-nextcode/wxnc-gor/gor-spark/nextcode/ubuntubasesparkr:3.3.0'
+        if (project.hasProperty('REGISTRY_USER')) {
+            auth {
+                username = project.findProperty('REGISTRY_USER')
+                password = project.findProperty('REGISTRY_PASSWORD')
+            }
+        }
+    }
+    to {
+        image = project.findProperty('APPLICATION_REPOSITORY') ?: "nextcode/spark"
+        //credHelper = 'osxkeychain'
+        tags = [project.findProperty('APPLICATION_TAG') ?: "${version}"]
+        if (project.hasProperty('REGISTRY_USER')) {
+            auth {
+                username = project.findProperty('REGISTRY_USER')
+                password = project.findProperty('REGISTRY_PASSWORD')
+            }
+        }
+    }
+    containerizingMode = 'packaged'
+    pluginExtensions {
+        pluginExtension {
+            implementation = 'com.google.cloud.tools.jib.gradle.extension.ownership.JibOwnershipExtension'
+            configuration {
+                rules {
+                    rule {
+                        glob = '/opt/spark/**'
+                        ownership = '3000:3000'
+                    }
+                }
+            }
+        }
+    }
+    container {
+        user = 'app'
+        entrypoint = '/opt/entrypoint.sh'
+        workingDirectory = '/opt/spark/work-dir/'
+        appRoot = '/opt/spark/'
+        environment = [JAVA_TOOL_OPTIONS:'-Djdk.lang.processReaperUseDefaultStackSize=true --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED',SPARK_EXTRA_CLASSPATH:'/opt/spark/classpath/*']
+    }
+    extraDirectories {
+        permissions = ['/usr/bin/spark-operator':'777','/usr/bin/entrypoint.sh':'777','/usr/bin/gencerts.sh':'777']
+    }
 }
 
 project(':spark') {
@@ -22,17 +70,21 @@ project(':spark') {
         }
         implementation(project(':util')) {
             exclude group: 'ch.qos.logback', module: 'logback-classic'
+            exclude group: 'ch.qos.logback', module: 'logback-core'
         }
         implementation(project(':model')) {
             exclude group: 'ch.qos.logback', module: 'logback-classic'
+            exclude group: 'ch.qos.logback', module: 'logback-core'
             exclude group: 'org.scalanlp', module: 'breeze_2.12'
         }
         implementation(project(':gortools')) {
             exclude group: 'ch.qos.logback', module: 'logback-classic'
+            exclude group: 'ch.qos.logback', module: 'logback-core'
             exclude group: 'net.sourceforge.f2j', module: 'arpack_combined_all'
         }
         implementation(project(':auth')) {
             exclude group: 'ch.qos.logback', module: 'logback-classic'
+            exclude group: 'ch.qos.logback', module: 'logback-core'
         }
 
         annotationProcessor 'com.google.auto.service:auto-service:_'
@@ -133,7 +185,7 @@ project(':spark') {
         implementation group: 'org.apache.thrift', name: 'libthrift', version: '0.15.0'
 
         implementation "com.auth0:java-jwt:_"
-        //implementation "ml.dmlc:xgboost4j-spark_${scalaVersion}:1.6.1"
+        implementation "ml.dmlc:xgboost4j-spark_${scalaVersion}:1.6.2"
         implementation("org.scalanlp:breeze_${scalaVersion}") {
             version {
                 strictly "1.3"
@@ -224,12 +276,16 @@ project(':spark') {
         implementation "com.github.samtools:htsjdk:_"
 
         runtimeOnly "io.prometheus.jmx:jmx_prometheus_javaagent:_"
-        //runtimeOnly "${gorArtifactGroupId}:gor-drivers:${gorVersion}"
+        /*runtimeOnly("${gorArtifactGroupId}:gor-drivers:${gorVersion}") {
+            exclude group: 'ch.qos.logback', module: 'logback-classic'
+            exclude group: 'ch.qos.logback', module: 'logback-core'
+        }*/
 
         implementation 'io.kubernetes:client-java:_'
 
         testImplementation(project(":test")) {
             exclude group: 'ch.qos.logback', module: 'logback-classic'
+            exclude group: 'ch.qos.logback', module: 'logback-core'
         }
     }
 }
